[package]
name = "spyware_cli"
version = "0.1.0"
authors = ["talbor49 <talbor49@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spyware = { git = "https://github.com/talbor49/spyware" }
ron = "0.5.1"
byteorder = "1.3.2"
structopt = "0.3.11"
serde = "1.0.104"
